argocd/external-services/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-readarr
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 30025
