argocd/external-services/readarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-readarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-readarr
        port: 30045
  tls:
    secretName: ext-cert-readarr
